# mochi-doc

./: .gitignore  .readthedocs.yaml  Makefile  README.md
code/: CMakeLists.txt  spack.yaml
code/abtio/: CMakeLists.txt
code/abtio/01_init/: CMakeLists.txt  main.c
code/abtio/02_io/: CMakeLists.txt  main.c
code/abtio/03_async/: CMakeLists.txt  main.c
code/argobots/01_intro/: CMakeLists.txt  hello_world.c
code/argobots/02_xstreams_pools/: CMakeLists.txt  fixed_allocation.c  work_stealing.c
code/argobots/03_ults_tasklets/: CMakeLists.txt  revive_example.c  simple_example.c  tasklet_example.c  ult_example.c
code/argobots/04_schedulers/: CMakeLists.txt  basic_scheduler.c  fibonacci.c  priority_scheduler.c  work_stealing.c
code/argobots/05_barriers/: CMakeLists.txt  stencil_barrier.c
code/argobots/05_mutex_cond/: pthread_interop.c  shared_queue.c
code/argobots/06_eventuals_rwlocks/: CMakeLists.txt  eventual_example.c  rwlock_example.c
code/argobots/06_futures/: CMakeLists.txt
code/argobots/07_barriers_futures/: CMakeLists.txt  iterative_algorithm.c  parallel_reduce.c  stencil_future.c
code/argobots/07_mutex_cond/: CMakeLists.txt  producer_consumer.c  shared_queue.c
code/argobots/08_self_operations/: CMakeLists.txt  progress_polling.c  yield_sync.c
code/argobots/08_sync_primitives/: CMakeLists.txt  eventual_example.c  thread_local.c
code/argobots/10_custom_schedulers/: CMakeLists.txt  custom_scheduler.c  simple_custom.c
code/argobots/10_performance_debug/: CMakeLists.txt  debugging_example.c  timing_example.c
code/argobots/11_performance_debug/: CMakeLists.txt  error_handling.c
code/bake/01_init/: CMakeLists.txt  bedrock.json  server.c
code/bake/02_client/: CMakeLists.txt  client.c
code/bedrock/: example.json
code/bedrock/02_json/: example.json
code/bedrock/03_query/: query.jx9
code/bedrock/04_c_module/: CMakeLists.txt  module.c
code/bedrock/04_module/: CMakeLists.txt  module.cpp
code/bedrock/05_cpp_module/: CMakeLists.txt  module.cpp
code/bedrock/05_jx9/: example.jx9  example.toml
code/bedrock/05_python/: client.py  group.py  query.py  runtime.py  server.py
code/bedrock/06_flock_integration/: CMakeLists.txt  basic-config.json  client.cpp  distributed-config.json  python_example.py
code/bedrock/06_jx9/: example.toml
code/bedrock/07_runtime_config/: CMakeLists.txt  add_pool.cpp  add_provider.cpp  add_xstream.cpp  async.cpp  basic_client.cpp  change_pool.cpp  complete.cpp  jx9_query.cpp  load_module.cpp  migrate.cpp  query.cpp  restore.cpp  snapshot.cpp
code/bedrock/08_flock_integration/: CMakeLists.txt  basic-config.json  distributed-config.json  python_example.py  with-dependency.json
code/bedrock/08_python/: client.py  group.py  query.py  runtime.py  server.py  spec.py
code/cmake/: FindPMIx.cmake
code/cmake/Modules/: FindABT.cmake  FindBMI.cmake  FindCCI.cmake  FindMARGO.cmake  FindMERCURY.cmake
code/flock/01_intro/: CMakeLists.txt  bedrock-config.json  client.c  server.c
code/flock/02_bootstrap_self/: CMakeLists.txt  server.c
code/flock/03_bootstrap_view/: CMakeLists.txt  server.c  view.json
code/flock/04_bootstrap_mpi/: CMakeLists.txt  bedrock-config.json  server.c
code/flock/05_bootstrap_join/: CMakeLists.txt  server.c
code/flock/06_bootstrap_file/: CMakeLists.txt  server.c  view.json
code/flock/07_backends_static/: CMakeLists.txt  server.c
code/flock/08_backends_centralized/: CMakeLists.txt  server.c
code/flock/09_client_api/: CMakeLists.txt  client.c
code/flock/10_group_view/: CMakeLists.txt  client.c
code/flock/11_bedrock/: bedrock-config-centralized.json
code/flock/12_cpp/: CMakeLists.txt  client.cpp  server.cpp
code/flock/13_python/: file_operations.py  group_updates.py  group_view_ops.py  quickstart.py  server_backends.py
code/margo/: CMakeLists.txt
code/margo/01_init/: server.c
code/margo/02_hello/: client.c  server.c
code/margo/03_sum/: client.c  server.c
code/margo/04_bulk/: client.c  server.c
code/margo/05_async/: client.c  server.c
code/margo/06_provider/: CMakeLists.txt  alpha-client.c  alpha-client.h  alpha-server.c  alpha-server.h  client.c  server.c
code/margo/07_pool/: server.c
code/margo/09_config/: server.c
code/margo/11_timers/: client.c
code/mercury/: CMakeLists.txt
code/mercury/01_init/: CMakeLists.txt  client.c  server.c
code/mercury/02_hello/: CMakeLists.txt  client.c  server.c
code/mercury/03_local/: CMakeLists.txt  client.c  server.c
code/mercury/04_args/: CMakeLists.txt  client.c  server.c
code/mercury/05_bulk/: CMakeLists.txt  client.c  server.c  types.h
code/pymargo/01_rpc/: client.py  server.py
code/pymargo/02_bulk/: client.py  server.py
code/pymargo/03_provider/: client.py  server.py
code/pymargo/04_non_blocking/: client.py  server.py
code/ssg/01_init/: CMakeLists.txt  main.c
code/ssg/02_create/: CMakeLists.txt  main.c
code/ssg/03_create_file/: CMakeLists.txt  main.c
code/ssg/04_create_mpi/: CMakeLists.txt  main.c
code/ssg/05_create_pmix/: CMakeLists.txt  main.c
code/ssg/06_join_leave/: CMakeLists.txt  proc1.c  proc2.c
code/ssg/07_observe/: CMakeLists.txt  proc1.c  proc2.c
code/ssg/07_refresh/: CMakeLists.txt  proc2.c
code/ssg/08_info/: CMakeLists.txt  main.c
code/ssg/09_serialize/: CMakeLists.txt  main.c
code/thallium/: CMakeLists.txt
code/thallium/01_init/: server.cpp
code/thallium/02_hello/: server.cpp
code/thallium/03_args/: client.cpp  server.cpp
code/thallium/04_lambdas/: server.cpp
code/thallium/05_stop/: server.cpp
code/thallium/06_stl/: server.cpp
code/thallium/08_rdma/: client.cpp  server.cpp
code/thallium/09_providers/: server.cpp
code/thallium/12_rpc_pool/: server.cpp
code/thallium/13_abt_custom/: main.cpp
code/thallium/15_finalize/: CMakeLists.txt  client.cpp  server.cpp
code/warabi/: warabi_common.hpp
code/warabi/01_intro/: CMakeLists.txt  bedrock-config.json  client.cpp  server.cpp
code/warabi/02_basics/: CMakeLists.txt  client.cpp
code/warabi/03_backends_memory/: CMakeLists.txt  server.cpp
code/warabi/04_backends_pmem/: CMakeLists.txt  server.cpp
(+305 files in other folders)
